align with project names

--- a/case-study-1.html
+++ b/case-study-1.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>case_study_1_alanlee</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>case-study-1</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7899,8 +7899,12 @@ Skipping install of 'hecedsm' from a github remote, the SHA1 (df0a5444) has not 
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Alan Lee<br/>
-Feb 2, 2026</p>
+<ul>
+<li>Name: Alan Lee</li>
+<li>Student ID: 81562738</li>
+<li>Link to GitHub Repository: <a href="https://github.com/alanhimself/2026-dsci_200_case_study_1">https://github.com/alanhimself/2026-dsci_200_case_study_1</a>
+Feb 2, 2026</li>
+</ul>
 </div>
 </div>
 </div>
