--- a/case-study-1.html
+++ b/case-study-1.html
@@ -7795,7 +7795,34 @@ a.anchor-link {
 </style>
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
-<main><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=56f45c77-2fff-4280-b076-3d033b6c845f">
+<main>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=0bbaa03c-fa18-41fd-89eb-2674744562fc">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h1 id="Case-Study-1:-Smartwatches-are-More-Distracting-Than-Mobile-Phones-While-Driving.">Case Study 1: Smartwatches are More Distracting Than Mobile Phones While Driving.<a class="anchor-link" href="#Case-Study-1:-Smartwatches-are-More-Distracting-Than-Mobile-Phones-While-Driving.">¶</a></h1>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=d8472904-55f8-474b-b754-fa3cc332c145">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<ul>
+<li>Name: Alan Lee</li>
+<li>Student ID: 81562738</li>
+<li>Link to GitHub Repository: <a href="https://github.com/alanhimself/2026-dsci_200_case_study_1">https://github.com/alanhimself/2026-dsci_200_case_study_1</a>
+Feb 2, 2026</li>
+</ul>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=56f45c77-2fff-4280-b076-3d033b6c845f">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -7878,33 +7905,6 @@ Skipping install of 'hecedsm' from a github remote, the SHA1 (df0a5444) has not 
 <span class="ansi-cyan-fg">ℹ</span> Use the conflicted package (<span class="ansi-blue-fg">&lt;http://conflicted.r-lib.org/&gt;</span>) to force all conflicts to become errors
 </pre>
 </div>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=0bbaa03c-fa18-41fd-89eb-2674744562fc">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Case-Study-1:-Smartwatches-are-More-Distracting-Than-Mobile-Phones-While-Driving.">Case Study 1: Smartwatches are More Distracting Than Mobile Phones While Driving.<a class="anchor-link" href="#Case-Study-1:-Smartwatches-are-More-Distracting-Than-Mobile-Phones-While-Driving.">¶</a></h1>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=d8472904-55f8-474b-b754-fa3cc332c145">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<ul>
-<li>Name: Alan Lee</li>
-<li>Student ID: 81562738</li>
-<li>Link to GitHub Repository: <a href="https://github.com/alanhimself/2026-dsci_200_case_study_1">https://github.com/alanhimself/2026-dsci_200_case_study_1</a>
-Feb 2, 2026</li>
-</ul>
 </div>
 </div>
 </div>
